--- a/pengajian.html
+++ b/pengajian.html
@@ -60,7 +60,7 @@
       </div>
     </nav>
 
-    <img class="poster-pengajian" src="img/poster.jpeg" alt="">
+    <img class="poster-pengajian" src="img2/poster-baru.JPG" alt="">
 
         <!-- Empty div -->
         <div class="empty"></div>
