--- a/index.html
+++ b/index.html
@@ -105,17 +105,17 @@
         <img src="img/khidmat.jpeg" />
         <img src="img/guru.jpeg" />
         <img src="img/wanita.jpeg" />
-        <img src="img/poster.jpeg" />
+        <img src="img2/poster-baru.JPG" />
         <img src="img/yatim.jpeg" />
         <img src="img/khidmat.jpeg" />
         <img src="img/guru.jpeg" />
         <img src="img/wanita.jpeg" />
-        <img src="img/poster.jpeg" />
+        <img src="img2/poster-baru.JPG" />
         <img src="img/yatim.jpeg" />
         <img src="img/khidmat.jpeg" />
         <img src="img/guru.jpeg" />
         <img src="img/wanita.jpeg" />
-        <img src="img/poster.jpeg" />
+        <img src="img2/poster-baru.JPG" />
       </div>
       <!-- <button class="prev">Previous</button>
       <button class="next">Next</button> -->
