--- a/hubungi.html
+++ b/hubungi.html
@@ -52,7 +52,7 @@
           <li><a href="pengajian.html" class="nav-item">Pengajian</a></li>
           <li><a href="tentang.html" class="nav-item">Tentang</a></li>
           <li><a href="carta.html" class="nav-item">Carta</a></li>
-          <li><a href="blog.html" class="nav-item">Blog</a></li>
+          <!-- <li><a href="blog.html" class="nav-item">Blog</a></li> -->
           <li><a href="hubungi.html" class="nav-item">Hubungi</a></li>
         </ul>
       </div>
