--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <li><a href="pengajian.html" class="nav-item">Pengajian</a></li>
           <li><a href="tentang.html" class="nav-item">Tentang</a></li>
           <li><a href="carta.html" class="nav-item">Carta</a></li>
-          <li><a href="blog.html" class="nav-item">Blog</a></li>
+          <!-- <li><a href="blog.html" class="nav-item">Blog</a></li> -->
           <li><a href="hubungi.html" class="nav-item">Hubungi</a></li>
         </ul>
       </div>
@@ -61,13 +61,17 @@
     <!-- Slider -->
     <div class="slider">
       <a href=""
+      ><img src="img/habib.jpeg" class="active" />
+      <div class="caption">Majlis Ilmu.</div></a
+    >
+      <a href=""
         ><img src="img2/iftar.jpeg" class="active" />
         <div class="caption">Majlis Iftar Jamaie.</div></a
       >
-      <a href=""
+      <!-- <a href=""
         ><img src="img2/suasana.jpeg" />
         <div class="caption">Suasana Pengajian.</div></a
-      >
+      > -->
       <a href=""
         ><img src="img2/yatim.jpg" />
         <div class="caption">Bantuan kepada anak yatim dan piatu.</div></a
