--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
       <div class="caption">Majlis Ilmu.</div></a
     >
       <a href=""
-        ><img src="img2/iftar.jpeg" class="active" />
-        <div class="caption">Majlis Iftar Jamaie.</div></a
+        ><img src="img/habib2.JPG" class="active" />
+        <div class="caption">Pengajian Kitab Al-Yakut An-Nafis</div></a
       >
       <!-- <a href=""
         ><img src="img2/suasana.jpeg" />
