--- a/tentang.html
+++ b/tentang.html
@@ -182,7 +182,7 @@
             <a href="pengajian.html" id="#blog" class="links">Pengajian</a>
             <a href="tentang.html" id="#blog" class="links">Tentang</a>
             <a href="carta.html" id="#blog" class="links">Carta</a>
-            <a href="blog.html" id="#blog" class="links">Blog</a>
+            <!-- <a href="blog.html" id="#blog" class="links">Blog</a> -->
             <a href="hubungi.html" id="#blog" class="links">Hubungi</a>
           </div>
           <div class="credit">
